--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -45,7 +45,7 @@
             <div class="search-label">Search For:</div>
             <div class="search-selection-wrapper">
                 <div class="search-text-box">
-                    <input class="search" type="text" name="search" value="(e.g. jazz, Zumanity, Coldplay)" onBlur="onBlur(this)" onFocus="onFocus(this)">
+                    <input class="search" type="text" name="search" value="" placeholder="(e.g. jazz, Zumanity, Coldplay)" onBlur="onBlur(this)" onFocus="onFocus(this)">
                     <div class="search-submission"></div>
                     <div class="clr"></div>
                 </div>
