--- a/alpha/event/static/styles/browse/browse_event_list.css
+++ b/alpha/event/static/styles/browse/browse_event_list.css
@@ -8,8 +8,7 @@
 
 .entry-wrapper header{
     color: #000;
-    font-size: 1.1em;
-    font-weight: bold;
+    font-size: 12px;
     margin-bottom: 8px;
 }
 
