--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -30,7 +30,7 @@
     </ul>
     <form action="/events/" method="get" name="sform">
         <div class="location-wrapper">
-            <div class="location-label">Location:</div>
+            <div class="location-label">Location</div>
             <div class="location-selection-wrapper">
                 <div class="location-text-box"><input type="text" name="location" class="location" value="" placeholder="{{ user_location.user_location_name }}" autocomplete="off"></div>
                 <div class="search-lists">
@@ -42,7 +42,7 @@
             <div class="clr"></div>
         </div>
         <div class="search-wrapper">
-            <div class="search-label">Search For:</div>
+            <div class="search-label">Search For</div>
             <div class="search-selection-wrapper">
                 <div class="search-text-box">
                     <input class="search" type="text" name="search" value="" placeholder="(e.g. jazz, Zumanity, Coldplay)" onBlur="onBlur(this)" onFocus="onFocus(this)">
