--- a/alpha/home/templates/_signin_signup.html
+++ b/alpha/home/templates/_signin_signup.html
@@ -34,7 +34,7 @@
                 </li>
             {% else %}
                 <li>
-                    <a href="{% url 'userena_signin' %}">Sign In</a><span>&nbsp; | &nbsp;</span>
+                    <a href="{% url 'userena_signin' %}">Login</a><span>&nbsp; | &nbsp;</span>
                 </li>
                 <li>
                     <a href="{% url 'userena_signup' %}">Sign up</a>
