--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -45,7 +45,14 @@
             <div class="search-label">Search For</div>
             <div class="search-selection-wrapper">
                 <div class="search-text-box">
-                    <input class="search" type="text" name="search" value="" placeholder="(e.g. jazz)" onBlur="onBlur(this)" onFocus="onFocus(this)">
+                    <input class="search"
+                           type="text"
+                           name="search"
+                           value=""
+                           placeholder="(e.g. jazz)"
+                           data-placeholder="(e.g. jazz)"
+                           onBlur="onBlur(this)"
+                           onFocus="onFocus(this)">
                     <div class="search-submission"></div>
                     <div class="clr"></div>
                 </div>
