--- a/alpha/advertising/static/styles/advertising.css
+++ b/alpha/advertising/static/styles/advertising.css
@@ -9,17 +9,13 @@
 
 .home .advertising-right-container {
 	position: absolute;
-	right: 15px;	
+	right: 0;
 }
 
-.advertising-right {    
-    padding: 4px;
-    border: 1px solid #e2e2e2;
+.advertising-right {
+    padding: 5px;
+    background: #ffffff;
+    border: 1px solid #c5c5c5;
     margin-bottom: 4px;
     text-align: center;
-}
-
-.advertising-right.first {
-    padding-top: 0;
-    border-top: 0;
 }
