--- a/alpha/event/static/styles/browse/browse.css
+++ b/alpha/event/static/styles/browse/browse.css
@@ -53,7 +53,7 @@
 }
 
 .left-menu .switchers {
-    padding: 6px;
+    padding: 7px 6px;
     background: #c6c6c6;
 }
 
@@ -136,7 +136,7 @@
 }
 
 .all-tags-container.fixed {
-    min-height: 545px;
+    min-height: 547px;
     padding-bottom: 54px;
 }
 
@@ -191,13 +191,13 @@
     position: relative;
     background: #c6c6c6;
     padding-top: 9px;
-    padding-bottom: 7px;
+    padding-bottom: 6px;
     padding-left: 17px;
     padding-right: 18px;
 }
 
 .events-container .searchtags-wrapper ul.searchtags {
-    min-height: 24px;
+    min-height: 20px;
     margin: 0;
     background: #f1f1f1;
     border: 1px solid #33546f;
@@ -210,7 +210,7 @@
 .searchtags-wrapper .searchtags-placeholder {
     position: absolute;
     color: #999;
-    top: 16px;
+    top: 15px;
     left: 25px;
     z-index: 5;
 }
