--- a/alpha/event/static/styles/browse/featured_events.css
+++ b/alpha/event/static/styles/browse/featured_events.css
@@ -3,20 +3,28 @@
     background: #022E52;    
     padding: 5px;
     padding-right: 0;
-    padding-bottom: 40px;
+    padding-bottom: 28px;
     color: #fff;
     margin: 0 auto;
 }
 
 .featured-area h2 {
     position: absolute;
-    left: 5px;
-    bottom: 7px;
+    left: 9px;
+    bottom: 6px;
     margin: 0;
-    text-transform: uppercase;;
-    font-size: 16px;
+    padding: 0;
+    text-transform: uppercase;
+    font-size: 15px;
+    line-height: 15px;
+    height: 15px;
     font-family: HelveticaNeueLTCom;
     font-weight: bold;
+    display: block;
+}
+
+:-moz-any(x), .featured-area h2 {
+    bottom: 4px; /* dirty FF hack =( */
 }
 
 .features-wrapper {
