minor home page style changes

--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -110,7 +110,7 @@
                     {% include '_main_navigation.html' %}
                 </div>
             </div>
-            <div class="page-container">
+            <div class="page-container {{ page_type }}">
                 {% block featured %}{% endblock %}
 
                 <div class="content-wrapper">
