--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -49,11 +49,14 @@ html.preview, body.preview {
 
 .page-container {
     width: 1007px;
-    margin: 0px auto;
-    margin-top: 10px;
+    margin: 18px auto 0 auto;
     text-align:left;
     background: #e3e3e3;
     padding-bottom: 10px;
+}
+
+.page-container.index {
+    min-height: 1200px;
 }
 
 .page-container.preview {
