--- a/alpha/event/static/styles/browse/browse.css
+++ b/alpha/event/static/styles/browse/browse.css
@@ -90,7 +90,7 @@
 
 .left-menu ul.categories {
     margin: 0;    
-    padding: 14px 10px;
+    padding: 14px 10px 18px;
     border-top: 1px solid #506b80;
     background: #022e52;
 }
@@ -100,8 +100,17 @@
     padding-left: 9px;    
     border-bottom: 1px solid #c6c6c6;
     line-height: 20px;
+    height: 20px;
     vertical-align: middle;
     max-width: 145px;
+}
+
+.left-menu ul.categories li.last {
+    border-bottom: 0;
+}
+
+.left-menu ul.categories.tags {
+    padding-top: 7px;
 }
 
 .left-menu ul.categories.tags li {
@@ -136,7 +145,7 @@
 }
 
 .all-tags-container.fixed {
-    min-height: 547px;
+    min-height: 687px;
     padding-bottom: 54px;
 }
 
@@ -150,7 +159,7 @@
 
 .more-less-buttons {
     background: #022e52;
-    padding: 20px 0;
+    padding: 22px 0;
     position: absolute;
     width: 100%;
     bottom: 0;
