--- a/alpha/advertising/static/styles/advertising.css
+++ b/alpha/advertising/static/styles/advertising.css
@@ -16,6 +16,10 @@
     padding: 5px;
     background: #ffffff;
     border: 1px solid #c5c5c5;
-    margin-bottom: 4px;
+    margin-bottom: 6px;
     text-align: center;
+}
+
+.advertising-right a {
+    display: block;
 }
