--- a/alpha/event/static/styles/browse/browse_event_list.css
+++ b/alpha/event/static/styles/browse/browse_event_list.css
@@ -12,6 +12,10 @@
     margin-bottom: 8px;
 }
 
+.entry-wrapper header.total {
+    height: 14px;
+}
+
 .entry-wrapper .time-group {
     width: 100%;
     border-bottom: 2px solid #619cd7;
@@ -42,10 +46,12 @@
 
 .entry-wrapper .entry-info{
     position: relative;
-    height: 65px;
-    padding: 10px 5px;
-    margin-bottom: 4px;
-    
+    height: 64px;
+    padding: 6px 5px 10px;
+}
+
+.entry-wrapper .entry-info.another {
+    margin-top: 13px;
 }
 
 .entry-wrapper .entry-info.with-all-actions,
